<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

    <TextView
        android:id="@+id/txt_statics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_arrow"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"

        android:layout_marginTop="21dp"
        android:text="@string/statistics"
        android:textColor="@color/black"

        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/txt_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:src="@drawable/ic_save" />

    <TextView
        android:id="@+id/txt_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_arrow"
        android:layout_marginStart="40dp"
        android:text="@string/day"
        android:textColor="@color/black"
        android:textSize="20sp"


        />

    <TextView
        android:id="@+id/txt_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_arrow"
        android:layout_alignStart="@+id/txt_day"
        android:layout_marginStart="70dp"
        android:text="@string/week"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_arrow"
        android:layout_alignStart="@+id/txt_week"
        android:layout_marginStart="100dp"
        android:text="@string/month"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_arrow"
        android:layout_alignStart="@+id/txt_month"
        android:layout_marginStart="100dp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="normal" />


    <com.jjoe64.graphview.GraphView
        android:id="@+id/GraphView"
       android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/txt_month"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txt_topspending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/GraphView"

        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/top_spending"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        />

    <ImageView
        android:id="@+id/img_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GraphView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_outline_sort_24"


        />

    <LinearLayout
        android:id="@+id/linear_starbuck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_topspending"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"

        android:background="@drawable/shape"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="12dp"
            android:src="@drawable/starbuck"


            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/starbucks"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/jan_12_2022"
                android:textSize="15sp"


                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginEnd="10dp"
            android:gravity="right"
            android:text="-$ 150.00"
            android:textColor="#FF0000"

            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_yt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_starbuck"
        android:layout_marginStart="25dp"

        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:src="@drawable/youtube"


            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/youtube"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/jan_16_2022"
                android:textSize="15sp"


                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginEnd="10dp"
            android:gravity="right"
            android:text="@string/_11_99"

            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="0.9dp"
    android:layout_above="@id/img_wallet"
    android:background="@color/black"
    android:layout_marginBottom="5dp"/>
    <ImageView
        android:id="@+id/img_home"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_baseline_home_24"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        />

    <ImageView
        android:id="@+id/img_chart"
        android:layout_marginStart="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_home"
        android:src="@drawable/ic_baseline_bar_chart_24"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        />
    <ImageView
        android:id="@+id/img_wallet"
        android:layout_marginStart="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_chart"
        android:src="@drawable/ic_baseline_account_balance_wallet_24"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        />
    <ImageView
        android:id="@+id/img_profile"
        android:layout_marginStart="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_wallet"
        android:src="@drawable/ic_baseline_person_outline_24"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        />

</RelativeLayout>